<resources>
    <string name="app_name">Court Counter</string>

    <string name="player1">
        <font size="22">Player 1</font>
    </string>

    <string name="player2">
        <font size="22">Player 2</font>
    </string>

    <string name="punch">
        <font size="10">Punch</font>\n\<font size="8">(1 Point)</font>
    </string>

    <string name="torsoKick">
        <font size="10">Torso Kick</font>\n\<font size="8">(2 Points)</font>
    </string>

    <string name="headKick">
        <font size="10">Head Kick</font>\n\<font size="8">(3 Points)</font>
    </string>

    <string name="roundKick">
        <font size="10">Round Kick</font>\n\<font size="8">(4 Points)</font>
    </string>

    <string name="lowKick">
        <font size="10">Low Kick</font>\n\<font size="8">(1 Foul)</font>
    </string>

    <string name="push">
        <font size="10">Push</font>\n\<font size="8">(-1 Point)</font>
    </string>

    <string name="totalScore">
        <font size="14">Total score:\u0020</font>
    </string>

    <string name="energy">
        <font size="12">Energy:\u0020</font>
    </string>

    <string name="fouls">
        <font size="12">Fouls:\u0020</font>
    </string>

    <string name="scored">
        <font size="12">Scored</font>
    </string>

    <string name="restartFightButton">
        <font size="12">Restart Fight</font>
    </string>

    <string name="WINNER">WINNER</string>

    <string name="LOSER">LOSER</string>
    <string name="DRAW">DRAW</string>
    <string name="logNoMatchingView">No Matching viewId</string>
    <string name="empty"></string>
</resources>